--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,18 +1,97 @@
+html, body{
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width:100%;
+    height:100%;
+    background: #4f4f4f;
+}
+
+div{
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+#list_folder{
+    display:flex;
+    height: 95%;
+    width:100%;
+}
+
+#total_list{
+    width:100%;
+    height: 95%;
+}
+
+#to_print{
+    width:100%;
+    height:100%;
+    border: 1px solid #aa00cc;
+    background: #aa99cc;
+    transition: all .3s;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#to_print.hidden{
+    transform: translateX(+95%);
+}
+
+#to_print_label{
+    height: 100%;
+    width: 5%;
+    background: #ff9900;
+}
+
+#to_print_label span{
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+}
+
+#to_print_list{
+    display: none;
+    width:95%;
+    height:100%;
+}
+
+#form_new{
+    width:100%;
+    height:100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all .3s; 
+    background: #22ff44;
+}
+
+#form_new.hidden{
+    transform: translateY(+95%);
+}
+
+#new_label{
+    width:100%;
+    height:5%;
+    text-align: center;
+    background: #22ffaa;
+}
 
 #lista_cartellini{
+    height:100%;
+    width:95%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    overflow-y: scroll;    
 }
 
 .cartellino {
     display:inline;
-    /*width: 200px;
-    height: 100px;*/
-    margin: 5px;
+    margin: 5px auto;
     border: 1px solid #000;
     background-color: #3b3b3b;
-    color: #fff;
+    color: #f4f4f4;
     font: 18px Gabriola, sans-serif, arial;
 }
 
@@ -39,3 +118,70 @@
 .qty_modifier [role=crt_plus] {
     width: 100%;
 }
+
+
+*::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 2px;
+	background-color: #5f5f5f;
+}
+
+*::-webkit-scrollbar {
+	width: 3px;
+	background-color: #5f5f5f;
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 2px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #f5f5f5;
+}
+
+#search_container{
+    width: 80%;
+    margin: 15px auto;
+    vertical-align: middle;
+    white-space: nowrap;
+    position: relative;
+}
+
+#search_container .icon{
+    position: absolute;
+    top: 50%;
+    margin-left: 17px;
+    margin-top: 17px;
+    z-index: 1;
+    color: #4f5b66;
+}
+
+#search_bar{
+    width: 100%;
+    height: 50px;
+    background: #3b3b3b;
+    border: none;
+    font-size: 10pt;
+    float: left;
+    color: #f4f4f4;
+    padding-left: 45px;
+    border-radius: 5px;
+    -webkit-transition: background .55s ease;
+}
+
+#search_bar::-webkit-input-placeholder {
+    color: #65737e;
+}
+
+#search_container input#search:hover, #search_container input#search:focus, #search_container input#search:active{
+    outline:none;
+    background: #4f4f4f;
+}
+
+#search_bar::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 17px;
+    width: 17px;
+    background-image: url('../img/clear_search.png');
+    background-repeat: no-repeat;
+    background-size: 17px;
+    background-position: top left;
+  }
