--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,14 @@ div{
     padding: 0;
 }
 
+h4{
+    margin: 5px 2px;
+}
+
+h5{
+    margin: 2px;
+}
+
 #list_folder{
     display:flex;
     height: 95%;
@@ -21,7 +29,7 @@ div{
 
 #total_list{
     width:100%;
-    height: 95%;
+    height: 100%;
 }
 
 #to_print{
@@ -84,12 +92,13 @@ div{
 }
 
 #lista_cartellini{
-    height:100%;
+    height:93%;
     width:95%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     overflow-y: scroll;    
+    align-items: flex-start;
 }
 
 .cartellino {
@@ -104,12 +113,12 @@ div{
 .crt_details {
     display: inline-block;
     width: 75%;
-    height: 95px;
     margin: 2px;
+    padding-left: 5px;
 }
 
 .qty_modifier {
-    display: inline-block;
+    float: right;
     width: 20%;
     height: 95px;
     margin: 2px;
@@ -160,7 +169,9 @@ div{
 
 #search_container{
     width: 80%;
-    margin: 15px auto;
+    height: 7%;
+    margin: 0 auto;
+    padding: 15px 0 0 0;
     vertical-align: middle;
     white-space: nowrap;
     position: relative;
