--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,6 +15,7 @@ div{
 
 h4{
     margin: 5px 2px;
+    display: inline;
 }
 
 h5{
@@ -35,8 +36,8 @@ h5{
 #to_print{
     width:100%;
     height:100%;
-    border: 1px solid #aa00cc;
-    background: #aa99cc;
+    border: 1px solid #aaa;
+    background: #ccc;
     transition: all .3s;
     position: absolute;
     top: 0;
@@ -50,7 +51,7 @@ h5{
 #to_print_label{
     height: 100%;
     width: 5%;
-    background: #ff9900;
+    background: #a4a4a4;
     float: left;
 }
 
@@ -77,7 +78,7 @@ h5{
     top: 0;
     left: 0;
     transition: all .3s; 
-    background: #22ff44;
+    background: #ccc;
 }
 
 #form_new.hidden{
@@ -88,7 +89,7 @@ h5{
     width:100%;
     height:5%;
     text-align: center;
-    background: #22ffaa;
+    background: #aaa;
 }
 
 #lista_cartellini{
@@ -102,12 +103,33 @@ h5{
 }
 
 .cartellino {
+    width: 15%;
     display:inline;
     margin: 5px auto;
     border: 1px solid #000;
     background-color: #3b3b3b;
     color: #f4f4f4;
     font: 18px Gabriola, sans-serif, arial;
+}
+
+.bianco{
+    background: rgba(255, 255, 255, 0.322);
+}
+
+.blu{
+    background: rgba(0, 100, 250, 0.322);
+}
+
+.verde{
+    background: rgba(0, 250, 42, 0.322);
+}
+
+.rosso{
+    background: rgba(250, 29, 0, 0.322);
+}
+
+.giallo{
+    background: rgba(250, 233, 0, 0.322);
 }
 
 .crt_details {
@@ -137,7 +159,7 @@ h5{
     width:50%;
 }
 
-.qty_modifier div button, .qty_modifier div input[role=crt_qty], .qty_modifier div input[role=crt_qty]:focus {
+.qty_modifier div button, .qty_modifier div input[role=crt_qty], .qty_modifier div input[role=crt_qty]:focus, button[role=crt_remove] {
     -webkit-appearance: none;
     margin:0 auto;
     background: #3b3b3b;
@@ -146,8 +168,10 @@ h5{
     outline: none;
 }
 
-.qty_modifier [role=crt_qty] {
+.qty_modifier div input[role=crt_qty] {
     width: 100%;
+    background: #6f6f6f;
+    padding-left: 2px;
 }
 
 *::-webkit-scrollbar-track {
